# codama-rs

./: Cargo.toml  README.md
codama/: Cargo.toml
codama-attributes/: Cargo.toml
codama-attributes/src/: apply_to_node.rs  attribute.rs  attribute_context.rs  attributes.rs  codama_attribute.rs  derive_attribute.rs  lib.rs  node_attribute.rs  number_attribute.rs  repr_attribute.rs  string_attribute.rs  try_from_filter.rs  type_attribute.rs  unsupported_attribute.rs
codama-attributes/src/codama_directives/: account_directive.rs  argument_directive.rs  codama_directive.rs  default_value_directive.rs  discriminator_directive.rs  encoding_directive.rs  enum_discriminator_directive.rs  error_directive.rs  field_directive.rs  fixed_size_directive.rs  mod.rs  name_directive.rs  number_directive.rs  optional_account_strategy_directive.rs  pda_directive.rs  program_directive.rs  resolvable_directive.rs  seed_directive.rs  size_prefix_directive.rs  skip_directive.rs  string_directive.rs  type_directive.rs
codama-attributes/src/node_attribute/: mod.rs  node.rs  node_attribute.rs  node_attribute_parse.rs
codama-attributes/src/parse_node_attribute/: mod.rs
codama-attributes/src/utils/: assert_node.rs  assert_type.rs  from_meta.rs  macros.rs  meta_consumer.rs  mod.rs  set_once.rs
codama-cli/: Cargo.toml  README.md
codama-cli/src/: main.rs
codama-cli/tests/: integration_test.rs
codama-errors/: Cargo.toml
codama-errors/src/: combine_errors.rs  errors.rs  lib.rs
codama-errors/tests/: compilation.rs  filesystem.rs  invalid_node_conversion.rs  manifest.rs
codama-korok-plugins/: Cargo.toml
codama-korok-plugins/src/: default_plugin.rs  directive_resolver.rs  lib.rs  plugin.rs  resolve_directives_visitor.rs
codama-korok-visitors/: Cargo.toml
codama-korok-visitors/src/: apply_codama_attributes_visitor.rs  apply_codama_type_attributes_visitor.rs  apply_type_modifiers_visitor.rs  apply_type_overrides_visitor.rs  borsh_visitor.rs  bottom_up_visitor.rs  combine_modules_visitor.rs  combine_types_visitor.rs  compose_visitor.rs  debug_visitor.rs  define_borsh_types_visitor.rs  define_link_types_visitor.rs  filter_items_visitor.rs  identify_field_types_visitor.rs  lib.rs  map_visitor.rs  set_accounts_visitor.rs  set_borsh_types_visitor.rs  set_default_values_visitor.rs  set_defined_types_visitor.rs  set_errors_visitor.rs  set_events_visitor.rs  set_instructions_visitors.rs  set_link_types_visitor.rs  set_pdas_visitor.rs  set_program_metadata_visitor.rs  set_well_known_programs_visitor.rs  uniform_visitor.rs  utils.rs  visitable.rs  visitor.rs
codama-korok-visitors/tests/: apply_codama_attributes_visitor.rs  apply_type_overrides_visitor.rs  compose_visitor.rs  debug_visitor.rs  define_link_types_visitor.rs  filter_items_visitor.rs  lib.rs  map_visitor.rs  parse.rs  set_accounts_visitor.rs  set_default_values_visitor.rs  set_defined_types_visitor.rs  set_link_types_visitor.rs  set_pdas_visitor.rs  set_well_known_programs_visitor.rs  uniform_visitor.rs
codama-korok-visitors/tests/apply_codama_attributes_visitor/: mod.rs  node_directive.rs  type_directive.rs
codama-korok-visitors/tests/apply_codama_type_attributes_visitor/: encoding_directive.rs  fixed_size_directive.rs  mod.rs  size_prefix_directive.rs  type_directive.rs
codama-korok-visitors/tests/apply_type_modifiers_visitor/: encoding_directive.rs  fixed_size_directive.rs  mod.rs  size_prefix_directive.rs
codama-korok-visitors/tests/borsh_visitor/: array_type_node.rs  boolean_type_node.rs  enum_empty_variant_type_node.rs  enum_struct_variant_type_node.rs  enum_tuple_variant_type_node.rs  enum_type_node.rs  map_type_node.rs  mod.rs  no_override.rs  number_type_node.rs  public_key_type_node.rs  set_type_node.rs  string_type_node.rs  struct_type_node.rs  tuple_type_node.rs  utils.rs
codama-korok-visitors/tests/bottom_up_visitor/: enum_korok.rs  enum_variant_korok.rs  field_korok.rs  fields_korok.rs  mod.rs  module_korok.rs  struct_korok.rs  utils.rs
codama-korok-visitors/tests/combine_modules_visitor/: account_node.rs  constant_node.rs  defined_type_node.rs  error_node.rs  event_node.rs  instruction_node.rs  mod.rs  module_korok.rs  pda_node.rs  program_directive.rs  program_node.rs  root_node.rs  utils.rs
codama-korok-visitors/tests/combine_types_visitor/: enum_korok.rs  enum_variant_korok.rs  field_korok.rs  fields_korok.rs  mod.rs  module_korok.rs  struct_korok.rs
codama-koroks/: Cargo.toml
codama-koroks/src/: attributes.rs  const_korok.rs  crate_korok.rs  enum_korok.rs  enum_variant_korok.rs  field_korok.rs  fields_korok.rs  file_module_korok.rs  impl_const_korok.rs  impl_item_korok.rs  impl_korok.rs  impl_trait_korok.rs  internals.rs  item_korok.rs  korok.rs  korok_visitor.rs  koroks.rs  lib.rs  module_korok.rs  modules.rs  nodes.rs  root_korok.rs  stores.rs  struct_korok.rs  trait_korok.rs  type_korok.rs  unsupported_impl_item_korok.rs  unsupported_item_korok.rs
codama-koroks/tests/: parse.rs
codama-macros/: Cargo.toml
codama-macros/src/: attributes.rs  derives.rs  lib.rs  pda_helpers.rs
codama-macros/tests/: mod.rs
codama-nodes/: Cargo.toml
codama-nodes/derive/: Cargo.toml
codama-nodes/src/: account_node.rs  constant_node.rs  defined_type_node.rs  error_node.rs  event_node.rs  instruction_account_node.rs  instruction_argument_node.rs  instruction_byte_delta_node.rs  instruction_node.rs  instruction_remaining_accounts_node.rs  instruction_status_node.rs  lib.rs  node.rs  pda_node.rs  playground.rs  program_node.rs  root_node.rs  traits.rs
codama-nodes/tests-derive/: Cargo.toml
codama-plugin-core/: Cargo.toml
codama-plugin-core/src/: default_plugin.rs  lib.rs  plugin.rs
codama-stores/: Cargo.toml
codama-stores/src/: crate_store.rs  file_module_store.rs  lib.rs  root_store.rs
codama-stores/tests/: lib.rs
codama-syn-helpers/: Cargo.toml
codama-syn-helpers/src/: attribute_meta.rs  builder.rs  collect_and_combine_errors.rs  expr.rs  generics.rs  ident.rs  lib.rs  meta.rs  path.rs
codama-syn-helpers/tests-macros/: Cargo.toml
codama/src/: codama.rs  lib.rs
codama/tests/: lib.rs
(+659 files in other folders)
