[workspace]
resolver = "2"
members = [
  "codama",
  "codama-attributes",
  "codama-errors",
  "codama-koroks",
  "codama-korok-plugins",
  "codama-korok-visitors",
  "codama-macros",
  "codama-nodes",
  "codama-nodes/derive",
  "codama-nodes/tests-derive",
  "codama-stores",
  "codama-syn-helpers",
  "codama-syn-helpers/tests-macros",
  "codama-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/codama-idl/codama-rs"
