[package]
name = "codama-attributes"
description = "Codama attributes definitions and parsers"
version = "0.6.4"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
codama-errors = { version = "0.6.4", path = "../codama-errors" }
codama-nodes = { version = "0.6.4", path = "../codama-nodes" }
codama-syn-helpers = { version = "0.6.4", path = "../codama-syn-helpers" }
derive_more = { version = "1.0", features = ["from"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
