[package]
name = "codama-cli"
description = "Command-line interface for Codama"
version = "0.6.5"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "codama-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
codama = { version = "0.6.5", path = "../codama" }
codama-errors = { version = "0.6.5", path = "../codama-errors" }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
