[package]
name = "codama-korok-visitors"
description = "Visitors for Korok trees"
version = "0.0.0"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dev-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
codama-stores = { path = "../codama-stores", version = "0.0.0" }

[dependencies]
cargo_toml = "0.20"
codama-attributes = { version = "0.0.0", path = "../codama-attributes" }
codama-errors = { version = "0.1.0", path = "../codama-errors" }
codama-koroks = { version = "0.0.0", path = "../codama-koroks" }
codama-nodes = { version = "0.1.0", path = "../codama-nodes" }
codama-syn-helpers = { version = "0.1.0", path = "../codama-syn-helpers" }
syn = { version = "2.0", features = ["extra-traits", "full"] }
