[package]
name = "codama-korok-visitors"
description = "Visitors for Korok trees"
version = "0.6.3"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dev-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
codama-stores = { path = "../codama-stores", version = "0.6.3" }

[dependencies]
cargo_toml = "0.20"
codama-attributes = { version = "0.6.3", path = "../codama-attributes" }
codama-errors = { version = "0.6.3", path = "../codama-errors" }
codama-koroks = { version = "0.6.3", path = "../codama-koroks" }
codama-nodes = { version = "0.6.3", path = "../codama-nodes" }
codama-syn-helpers = { version = "0.6.3", path = "../codama-syn-helpers" }
serde_json = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
