[package]
name = "codama-koroks"
description = "Intermediate tree structure for collecting nodes"
version = "0.7.2"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dev-dependencies]
quote = "1.0"

[dependencies]
codama-attributes = { version = "0.7.2", path = "../codama-attributes" }
codama-errors = { version = "0.7.2", path = "../codama-errors" }
codama-nodes = { version = "0.7.2", path = "../codama-nodes" }
codama-stores = { version = "0.7.2", path = "../codama-stores" }
codama-syn-helpers = { version = "0.7.2", path = "../codama-syn-helpers" }
derive_more = { version = "1.0", features = ["from"] }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
