[package]
name = "codama-macros"
description = "Procedural macros for the Codama standard"
version = "0.6.1"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/mod.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
codama-attributes = { version = "0.6.1", path = "../codama-attributes" }
codama-errors = { version = "0.6.1", path = "../codama-errors" }
codama-koroks = { version = "0.6.1", path = "../codama-koroks" }
codama-stores = { version = "0.6.1", path = "../codama-stores" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
