[package]
name = "codama-nodes"
description = "Node specifications and helpers for the Codama standard"
version = "0.1.0"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
codama-errors = { path = "../codama-errors" }
codama-nodes-derive = { path = "derive", version = "0.1.0" }
derive_more = { version = "1.0", features = ["from"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
