[package]
name = "codama-nodes"
description = "Node specifications and helpers for the Codama standard"
version = "0.1.2"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
codama-errors = { version = "0.1.2", path = "../codama-errors" }
codama-nodes-derive = { version = "0.1.2", path = "derive" }
derive_more = { version = "1.0", features = ["from"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
