[package]
name = "codama-stores"
version = "0.1.0"
edition = "2021"

[[test]]
name = "tests"
path = "tests/lib.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
quote = "1.0"

[dependencies]
cargo_toml = "0.20"
codama-errors = { path = "../codama-errors" }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
