[package]
name = "codama-stores"
description = "Load the content of crates recursively in stores"
version = "0.6.5"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dev-dependencies]
quote = "1.0"

[dependencies]
cargo_toml = "0.20"
codama-errors = { version = "0.6.5", path = "../codama-errors" }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
