[package]
name = "codama-syn-helpers"
description = "Extension of syn for Codama"
version = "0.8.0"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
codama-errors = { version = "0.8.0", path = "../codama-errors" }
derive_more = { version = "1.0", features = ["from"] }
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
