[package]
name = "codama"
description = "Generate clients, CLIs, documentation and more from your Solana programs"
version = "0.7.3"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
codama-macros = { version = "0.7.3", path = "../codama-macros" }

[target.'cfg(not(target_os = "solana"))'.dependencies]
codama-errors = { version = "0.7.3", path = "../codama-errors" }
codama-korok-plugins = { version = "0.7.3", path = "../codama-korok-plugins" }
codama-korok-visitors = { version = "0.7.3", path = "../codama-korok-visitors" }
codama-koroks = { version = "0.7.3", path = "../codama-koroks" }
codama-nodes = { version = "0.7.3", path = "../codama-nodes" }
codama-stores = { version = "0.7.3", path = "../codama-stores" }
proc-macro2 = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
