[package]
name = "codama-nodes-derive"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/mod.rs"

[dev-dependencies]
codama-nodes = { path = ".." }
trybuild = { version = "1.0.49", features = ["diff"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
codama-errors = { path = "../../codama-errors" }
codama-syn-helpers = { path = "../../codama-syn-helpers" }
derive_more = { version = "1.0", features = ["from"] }
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
