[package]
name = "codama-nodes-derive"
description = "Derive macros for Codama nodes"
version = "0.6.2"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
codama-errors = { version = "0.6.2", path = "../../codama-errors" }
codama-syn-helpers = { version = "0.6.2", path = "../../codama-syn-helpers" }
derive_more = { version = "1.0", features = ["from"] }
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
