[package]
name = "codama-nodes-derive-test-macros"
description = "Tests for internal Codama node macros"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dev-dependencies]
codama-errors = { version = "0.7.3", path = "../../codama-errors" }
codama-nodes = { version = "0.7.3", path = ".." }
codama-nodes-derive = { version = "0.7.3", path = "../derive" }
derive_more = { version = "1.0", features = ["from"] }
trybuild = { version = "1.0.49", features = ["diff"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
