[package]
name = "codama-syn-helpers-test-macros"
description = "Tests for syn helpers macros"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
codama-syn-helpers = { version = "0.6.3", path = ".." }
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
