[package]
name = "codama-syn-helpers-test-macros"
description = "Tests for syn helpers macros"
version = "0.0.0"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
codama-syn-helpers = { version = "0.0.0", path = "../../../codama-syn-helpers" }
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
